# chora-sync

./: .gitignore  README.md  pyproject.toml
src/chora_sync/: __init__.py  changes.py  clock.py  extension.py  merge.py
tests/: __init__.py  test_changes.py  test_clock.py  test_extension.py  test_merge.py
